# python-template

./: .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pr-checks.yml  publish.yml
python_template/: my_module.py
tests/python_template/: test_my_module.py
