[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "python-template"
version = "0.1.0"
description = "A template for Python packages using Poetry"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "python_template"}]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
pre-commit = "^3.0.0"

[tool.mypy]
packages = ["python_template"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff.lint]
# D enables all `pydocstyle` rules
# I enables all `isort` rules
select = ["D", "I"]

# disable `D417`, required documentation for every function parameter.
ignore = ["D417"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["D"]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=python_template"
testpaths = ["tests"]

[tool.coverage.run]
source = ["python_template"]

[tool.coverage.report]
exclude_lines = [
]
